# NanoInfer

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  setup.py
.github/: pull_request_template.md
benchmarks/: bench_attention.cu  bench_e2e.py  bench_gemm.cu  bench_softmax.cu
nanoinfer/: nanoinfer.pyi
src/bindings/: CMakeLists.txt  python.cpp
src/engine/: kvcache.cpp  kvcache.h  model.cpp  model.h  sampler.cpp  sampler.h
src/kernels/: attention.cu  attention.h  gemm.cu  gemm.h  quantize.cu  quantize.h  softmax.cu  softmax.h
src/layers/: activation.cu  activation.h  embedding.cu  embedding.h  layernorm.cu  layernorm.h  linear.cu  linear.h
tests/: test_attention.cu  test_gemm.cu  test_kernels.py  test_quantize.cu  test_softmax.cu
tools/: clean.sh  convert_weights.py  gpu_info.sh  profile.sh
